--- a/user-service.properties
+++ b/user-service.properties
@@ -1,7 +1,7 @@
 spring.application.name=user-service
 server.port=8083
 
-spring.data.mongodb.uri=mongodb://mongo:27017/userdb
+spring.data.mongodb.uri=mongodb://mongo:27017/authdb
 
 eureka.client.service-url.defaultZone=http://eureka:8761/eureka/
 eureka.instance.hostname=user-service
