--- a/flight-service-auth.properties
+++ b/flight-service-auth.properties
@@ -1,7 +1,7 @@
 spring.application.name=flight-service-auth
 server.port=8082
 
-spring.data.mongodb.uri=mongodb://mongo:27017/flightdb
+spring.data.mongodb.uri=mongodb://mongo:27017/flightmicroservicesdb
 
 eureka.client.service-url.defaultZone=http://eureka:8761/eureka/
 eureka.instance.hostname=flight-service-auth
